Add pytest - fixes to get it to work correctly.

--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -63,4 +63,4 @@ jobs:
         run: |
           poetry env info
           poetry --version
-          poetry run python -m unittest discover
+          poetry run pytest
