--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ requests = "^2.28.1"
 scikit-learn = "^1.1.3"
 urllib3 = "^1.26.13"
 wrapt = "^1.14.1"
+pydantic = "^1.10.7"
 
 [tool.poetry.group.dev.dependencies]
 imbalanced-learn = "^0.9.1"
